--- a/Styles/game.css
+++ b/Styles/game.css
@@ -1,7 +1,16 @@
 html, body {
 	background-color: #FFC0CB;
+
+	padding: 0;
+	margin: 0;
 }
 
 #hero {
 	text-align: center;
+}
+
+canvas {
+	background: #eee;
+	display: block;
+	margin: 0 auto;
 }
