--- a/Styles/game.css
+++ b/Styles/game.css
@@ -1,15 +1,14 @@
+/*gen*/
 html, body {
 	background-color: #FFC0CB !important;
+	width: 100%;
+}
 
+html, body, .container-fluid, .row {
 	padding: 0;
 	margin: 0;
 
 	width: 100%;
-}
-
-#hero {
-	max-width: 600px;
-	margin: 10px auto;
 }
 
 .btn {
@@ -18,27 +17,37 @@ html, body {
 	display: block;
 }
 
-#hero > h1 {
+/*main*/
+
+#main {
+	margin: 20px auto;
+	max-width: 600px;	
+}
+
+#main > h1 {
 	text-align: center;
 }
 
 canvas {
 	background: #eee;
 	display: block;
-	margin: 0 auto;
+	margin: 5px auto;
+	max-width: 100%;
 }
 
-.scores {
-	display: table;
-	margin: auto;
+.ad {
+	background-color: yellow;
+	height: 50%;
+	margin-top: 25%;
 }
 
-.score_item {
-	display: table-cell;
+.div.row.justify-content-center {
+	margin: 0 !important;
 }
 
 .score_item > img {
-	height: 80px;
+	height: 100%;
+	max-height: 80px;
 }
 
 img {
@@ -57,17 +66,13 @@ img {
 	color: green;
 }
 
-.container, #game {
-	max-width: 100%;
-}
-
 noscript > p {
 	text-align: center;
 }
 
-footer {
+.footer {
 	text-align: center;
 	bottom: 0;
-	margin: 100px auto;
+	margin: 10px auto;
 	max-width: 600px;
 }
